--- a/ci/index.html
+++ b/ci/index.html
@@ -2,13 +2,22 @@
 <html>
     <head>
         <title>Swift Lint: Error and Warning</title>
+        <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
         <script src="./graph.js"></script>    
     </head>
     <body>
-        <div>
-            <h1>Commuter</h1>            
+        <div class="lint_summary">
+            <h1>Commuter</h1>
             <canvas id="myChart" width="800" height="200"></canvas>
+            <div class="summary">
+                <dl>
+                    <dt>Error</dt>
+                        <dd id="commuter_error">100</dd>
+                    <dt>Warning</dt>
+                        <dd id="commuter_warning">5</dd>
+                </dl>
+            </div>
         <div>
     </body>
 </html>
